# Topology-Guided-Empirical-Formula-Discovery-TGEFD-

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  config_seed7.yaml  config_seed8.yaml  pyproject.toml  Новые горизонты.rtf
docs/: audit_policy.md  benchmarks_value_story.md  capacity_plan.md  cta_flow.md  ecdsa_golden_experiment.md  faq.md  ingress_trust_boundary.md  k8s_deploy.md  landing.md  method_trust.md  monitoring_k8s.md  nightly_benchmarking.md  observability.md  observability_integrations.md  observability_templates.md  ond_methodology.md  ond_rng_bench_roadmap.md  ond_rng_bench_spec.md  production_checklist.md  rbac.md  readiness.md  reliability.md  reproducibility_immutability.md  runbook_tasks.md  secret_management.md  security.md  theory.md
examples/: basic_run.py  config_file_dataset.yaml  config_uri_dataset.yaml  synthetic_truth_demo.py
k8s/: externalsecret.yaml  kustomization.yaml  tgefd-configmap.yaml  tgefd-deployment.yaml  tgefd-secret.yaml  tgefd-service.yaml
schemas/: ond_rng_bench_v1.json  tgefd_config_v1.json
scripts/: check_bench_regressions.py  generate_schema.py  load_test_k6.js  plot_benchmark_curves.py  render_ond_mapping.py  run_golden_experiment.py  run_nightly_bench.py  run_ond_rng_bench.py
tests/: test_api_v1.py  test_artifacts.py  test_bench_regressions.py  test_benchmark_metrics.py  test_config.py  test_data.py  test_dataset_io.py  test_defaults.py  test_multidim.py  test_ond_rng_bench.py  test_prometheus_metrics.py  test_search.py  test_server_jobs.py  test_server_security.py  test_sparse.py  test_storage.py  (+3 more)
(+74 files in other folders)
