[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgefd"
version = "0.1.0"
description = "Topology-Guided Empirical Formula Discovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "ripser>=0.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]
viz = [
  "persim>=0.3",
]
server = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]
temporal = [
  "temporalio>=1.6",
]
observability = [
  "prometheus_client>=0.20",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp>=1.24",
]
security = [
  "pyjwt>=2.8",
  "cryptography>=42.0",
]
cloud = [
  "boto3>=1.34",
]
gcs = [
  "google-cloud-storage>=2.14",
]
ui = [
  "streamlit>=1.31",
]
benchmarks = [
  "ecdsa>=0.18",
  "dilithium-py>=1.4",
  "scikit-learn>=1.3",
  "cryptography>=42.0",
]

[project.scripts]
tgefd = "tgefd.cli:main"

[tool.setuptools]
packages = ["tgefd", "tgefd.config"]

[tool.pytest.ini_options]
addopts = "-q"
